Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70987

Deleting a component containing a QtChart generates a crash

XMLWordPrintable

    • macOS, Windows
    • 93258593a47eb53502e7ceb38fc6fc4f05021389 (qt/qtcharts/5.12)

      A crash is observed when the user tries to delete a chartView created by createObject(). 

      I have attached a sample code reproducing the issue. 

      Steps to reproduce:

      1. Click "Add" button, ChartView will be created. 
      2. Click "Remove" button, application crashes. 

       

        1. qtbug70987_win_stack.txt
          15 kB
          Friedemann Kleint
        2. qtbug70987.zip
          3 kB
          Friedemann Kleint
        3. qtbug70987.zip
          3 kB
          Shveta Mittal
        4. stackTrace.png
          456 kB
          Shveta Mittal
        For Gerrit Dashboard: QTBUG-70987
        # Subject Branch Project Status CR V

            kiburtse Kirill Burtsev
            shmittal Shveta Mittal
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes