Fix crash on ChartView component destroy

QML engine expects that children of QML element are deleted through
parent/child relationship, but deferring breaks this assumption and
leads to crash later in destruction process.

Fixes: QTBUG-70987
Change-Id: I9ae3cefc6ee158582d17709272d7d33f45c57cdf
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>